Update GitHub user and repo name in index.html

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 </footer>
 
 <script>
-  const GITHUB_USER = "realvenerable";   // 👈 change if needed
-  const REPO_NAME = "gif-site";          // 👈 your repo name
+  const GITHUB_USER = "kokamisama";   // 👈 change if needed
+  const REPO_NAME = "realvenerable";          // 👈 your repo name
 
   const grid = document.getElementById("gifGrid");
 
